--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -1,2 +1,14 @@
-<h1>Admin::Genres#edit</h1>
-<p>Find me in app/views/admin/genres/edit.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-6 mx-auto">
+      <h2 class="title">ジャンル編集</h2>
+      <%= form_with model: @genre,url: admin_genre_path,method: :patch do |f| %>
+
+        <%= f.label :name,"ジャンル名" %>
+        <%= f.text_field :name %><br>
+        <%= f.submit "登録" %>
+
+      <% end %>
+    </div>
+  </div>
+</div>
