--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,2 +1,31 @@
-<h1>Admin::Genres#index</h1>
-<p>Find me in app/views/admin/genres/index.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-6">
+      <h2 class="title">ジャンル</h2>
+      <div class="field">
+        <%= render 'new', genre: @genre %>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <table class="table table-bordered">
+        <thead class="genre-thead">
+          <tr>
+            <th colspan="3">ジャンル名</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @genres.each do |genre| %>
+            <tr>
+              <td><%= genre.name %></td>
+              <td>
+                <%= link_to "編集", edit_admin_genre_path(genre.id),class: "btn btn-secondary" %>
+                <%= link_to "削除",admin_genre_path(genre),method: :delete,"data-confirm"=>"本当に削除しますか？",class: "btn btn-danger" %>
+              </td>
+            </tr>
+          <% end %>
+        </tbody>
+
+      </table>
+    </div>
+  </div>
+</div>
