--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,2 +1,5 @@
 <h1>Admin::Users#index</h1>
 <p>Find me in app/views/admin/users/index.html.erb</p>
+<%= link_to "ジャンル",admin_genres_path %>
+<%= link_to "ログアウト",destroy_admin_session_path,method: :delete %>
+<%= link_to "商品登録", new_admin_item_path %>
