--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -3,3 +3,4 @@
 <%= link_to "ジャンル",admin_genres_path %>
 <%= link_to "ログアウト",destroy_admin_session_path,method: :delete %>
 <%= link_to "商品登録", new_admin_item_path %>
+<%= link_to "商品一覧",admin_items_path %>
