--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -1,8 +1,24 @@
 <div class="container">
   <div class="row">
     <div class="col-md-10 mx-auto">
+
+      <% if @item.errors.any? %>
+        <%= @item.errors.count %>件のエラー
+        <% @item.errors.full_messages.each do |message| %>
+          <%= message %>
+        <% end %>
+      <% end %>
+
       <h2 class="title">商品登録</h2>
       <%= form_with model: @item,url: admin_items_path,method: :post do |f| %>
+        <div class="form-group row">
+          <div class="col-md-3">
+            <%= f.label :genre_id,"ジャンル" %>
+          </div>
+          <div class="col-md-9">
+            <%= f.collection_select :genre_id,@genres, :id, :name, {prompt: "選択してください"}, {class: "w-40"} %>
+          </div>
+        </div>
         <div class="form-group row">
           <div class="col-md-3">
             <%= f.label :name,"商品名" %>
