--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -6,7 +6,7 @@
           <% @items.each do |item| %>
             <tr>
               <td><%= item.genre.name %></td>
-              <td><%= item.name %></td>
+              <td><%= link_to item.name, admin_item_path(item) %></td>
               <td>
                 <% if item.is_active == true %>
                   販売中
