--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -11,6 +11,16 @@
 
       <h2 class="title">商品登録</h2>
       <%= form_with model: @item,url: admin_items_path,method: :post do |f| %>
+
+        <div class="form-group row">
+          <div class="col-md-3">
+            <%= f.label :image,"商品画像" %>
+          </div>
+          <div class="col-md-9">
+            <%= f.file_field :image, accept: "image/*" %>
+          </div>
+        </div>
+
         <div class="form-group row">
           <div class="col-md-3">
             <%= f.label :genre_id,"ジャンル" %>
