--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,2 +1,46 @@
-<h1>Admins::Items#show</h1>
-<p>Find me in app/views/admins/items/show.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-4">
+      <h2 class="title">商品詳細</h2>
+      <%= image_tag @item.get_image(100,100) %>
+    </div>
+    <div class="col-md-7 offset-1">
+      <div class="row">
+        <div class="col-md-4">
+          商品名
+        </div>
+        <div class="col-md-7 offset-1">
+          <%= @item.name %>
+        </div>
+        <div class="col-md-4">
+          商品説明
+        </div>
+        <div class="col-md-7 offset-1">
+          <%= @item.description %>
+        </div>
+        <div class="col-md-4">
+          ジャンル
+        </div>
+        <div class="col-md-7 offset-1">
+          <%= @item.genre.name %>
+        </div>
+        <div class="col-md-4">
+          税込み価格
+        </div>
+        <div class="col-md-7 offset-1">
+          <%= @item.excluding_tax_price %>
+        </div>
+        <div class="col-md-4">
+          販売ステータス
+        </div>
+        <div class="col-md-7 offset-1">
+          <% if @item.is_active == true %>
+            販売中
+          <% else %>
+            販売停止中
+          <% end %>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
