--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -25,10 +25,12 @@
           <%= @item.genre.name %>
         </div>
         <div class="col-md-4">
-          税込み価格
+          税込み価格<br>
+          (税抜き価格)
         </div>
         <div class="col-md-7 offset-1">
-          <%= @item.excluding_tax_price %>
+          <%= (@item.excluding_tax_price * 1.1).to_i %>円<br>
+          (<%= @item.excluding_tax_price %>円)
         </div>
         <div class="col-md-4">
           販売ステータス
@@ -41,6 +43,7 @@
           <% end %>
         </div>
       </div>
+      <%= link_to "編集", edit_admin_item_path(@item), class: "btn btn-success" %>
     </div>
   </div>
 </div>
