--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,6 +1,23 @@
-<h1>Admin::Users#index</h1>
-<p>Find me in app/views/admin/users/index.html.erb</p>
-<%= link_to "ジャンル",admin_genres_path %>
-<%= link_to "ログアウト",destroy_admin_session_path,method: :delete %>
-<%= link_to "商品登録", new_admin_item_path %>
-<%= link_to "商品一覧",admin_items_path %>
+<div class="container">
+  <div class="row">
+    <div class="col-md-10 mx-auto">
+      <h2 class="title">会員一覧</h2>
+      <table class="table">
+        <tr>
+          <th>会員ID</th>
+          <th>名前</th>
+          <th>メールアドレス</th>
+          <th>会員ステータス</th>
+        </tr>
+        <% @users.each do |user| %>
+          <tr>
+            <td><%= user.id %></td>
+            <td><%= link_to user.name, admin_user_path(user) %></td>
+            <td><%= link_to user.email %></td>
+            <td><%= is_active?(user) %></td>
+          </tr>
+        <% end %>
+      </table>
+    </div>
+  </div>
+</div>
