--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,6 +11,7 @@
       <%= link_to "ログアウト",destroy_admin_session_path,method: :delete %>
       <%= link_to "商品登録", new_admin_item_path %>
       <%= link_to "商品一覧",admin_items_path %>
+      <%= link_to "ユーザー一覧", admin_users_path %>
       <% else %>
         <%= link_to "新規登録", new_user_registration_path %>
         <%= link_to "ログイン", new_user_session_path %>
