--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -12,8 +12,13 @@
         <% @users.each do |user| %>
           <tr>
             <td><%= user.id %></td>
-            <td><%= link_to user.name, admin_user_path(user) %></td>
-            <td><%= link_to user.email %></td>
+            <td>
+              <%= link_to admin_user_path(user) do %>
+                <%= user.first_name %>
+                <%= user.last_name %>
+              <% end %>
+            </td>
+            <td><%= user.email %></td>
             <td><%= is_active?(user) %></td>
           </tr>
         <% end %>
