--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -2,6 +2,7 @@
   <div class="row">
     <div class="col-md-10 mx-auto">
       <h2 class="title"><%= @user.first_name %><%= @user.last_name %>さんの会員詳細</h2>
+      <%= link_to "編集",edit_admin_user_path(@user) %>
       <div class="row">
         <div class="col-md-6">
           会員ID
