--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,13 +5,14 @@
     </div>
     <div class="col-md-6">
       <% if user_signed_in? %>
+        <%= link_to "商品一覧", items_path %>
         <%= link_to "ログアウト", destroy_user_session_path,method: :delete %>
       <% elsif admin_signed_in? %>
-      <%= link_to "ジャンル",admin_genres_path %>
-      <%= link_to "ログアウト",destroy_admin_session_path,method: :delete %>
-      <%= link_to "商品登録", new_admin_item_path %>
-      <%= link_to "商品一覧",admin_items_path %>
-      <%= link_to "ユーザー一覧", admin_users_path %>
+        <%= link_to "ジャンル",admin_genres_path %>
+        <%= link_to "ログアウト",destroy_admin_session_path,method: :delete %>
+        <%= link_to "商品登録", new_admin_item_path %>
+        <%= link_to "商品一覧",admin_items_path %>
+        <%= link_to "ユーザー一覧", admin_users_path %>
       <% else %>
         <%= link_to "新規登録", new_user_registration_path %>
         <%= link_to "ログイン", new_user_session_path %>
