--- a/app/views/user/users/edit.html.erb
+++ b/app/views/user/users/edit.html.erb
@@ -1,2 +1,72 @@
-<h1>User::Users#edit</h1>
-<p>Find me in app/views/user/users/edit.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-8 mx-auto">
+      <h2 class="title"><%= @user.first_name %><%= @user.last_name %>さんの会員情報編集</h2>
+       <%= form_with model: @user, url: user_path, method: :patch do |f| %>
+         <div class="row">
+           <div class="col-md-6">
+           会員ID
+           </div>
+           <div class="col-md-6">
+             <%= @user.id %>
+           </div>
+         </div>
+         <div class="row">
+           <div class="col-md-4">
+             氏名
+           </div>
+           <div class="col-md-4">
+             <%= f.text_field :first_name %>
+           </div>
+           <div class="col-md-4">
+             <%= f.text_field :last_name %>
+           </div>
+         </div>
+         <div class="row">
+           <div class="col-md-4">
+             フリガナ
+           </div>
+           <div class="col-md-4">
+             <%= f.text_field :first_name_kana %>
+           </div>
+           <div class="col-md-4">
+             <%= f.text_field :last_name_kana %>
+           </div>
+         </div>
+         <div class="row">
+           <div class="col-md-4">
+             郵便番号
+           </div>
+           <div class="col-md-4">
+             <%= f.text_field :postal_code %>
+           </div>
+         </div>
+         <div class="row">
+           <div class="col-md-4">
+             住所
+           </div>
+           <div class="col-md-8">
+             <%= f.text_field :address %>
+           </div>
+         </div>
+         <div class="row">
+           <div class="col-md-4">
+             電話番号
+           </div>
+           <div class="col-md-4">
+             <%= f.text_field :phone_number %>
+           </div>
+         </div>
+         <div class="row">
+           <div class="col-md-4">
+             メールアドレス
+           </div>
+           <div class="col-md-4">
+             <%= f.text_field :email %>
+           </div>
+         </div>
+         <%= f.submit "更新", class: "btn btn-success" %>
+       <% end %>
+    </div>
+  </div>
+</div>
