--- a/app/views/user/users/show.html.erb
+++ b/app/views/user/users/show.html.erb
@@ -1,2 +1,35 @@
-<h1>User::Users#show</h1>
-<p>Find me in app/views/user/users/show.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-10">
+      <h2 class="title">マイページ</h2>
+      <h4>登録情報</h4>
+      <%= link_to "編集", edit_user_path(current_user), class: "btn btn-success" %>
+      <table class="table border">
+        <tr>
+          <th>氏名</th>
+          <td><%= @user.first_name %><%= @user.last_name %></td>
+        </tr>
+        <tr>
+          <th>カナ</th>
+          <td><%= @user.first_name_kana %><%= @user.last_name_kana %></td>
+        </tr>
+        <tr>
+          <th>郵便番号</th>
+          <td><%= @user.postal_code %></td>
+        </tr>
+        <tr>
+          <th>住所</th>
+          <td><%= @user.address %></td>
+        </tr>
+        <tr>
+          <th>電話番号</th>
+          <td><%= @user.phone_number %></td>
+        </tr>
+        <tr>
+          <th>メールアドレス</th>
+          <td><%= @user.email %></td>
+        </tr>
+      </table>
+    </div>
+  </div>
+</div>
