--- a/app/views/user/cart_items/index.html.erb
+++ b/app/views/user/cart_items/index.html.erb
@@ -1,2 +1,42 @@
-<h1>User::CartItems#index</h1>
-<p>Find me in app/views/user/cart_items/index.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-10 mx-auto">
+      <h2>カート</h2>
+      <%= link_to "全削除",destroy_all_cart_items_path, method: :delete ,class: "btn btn-danger" %>
+      <table class="table">
+        <tr>
+          <th>商品名</th>
+          <th>単価(税込)</th>
+          <th>数量</th>
+          <th>小計</th>
+          <th></th>
+        </tr>
+        <% total_price = 0 %>
+        <% @cart_items.each do |cart_item| %>
+          <% total_price += cart_item.item.tax_price * cart_item.amount %>
+          <tr>
+            <td><%= cart_item.item.name %></td>
+            <td><%= cart_item.item.tax_price %>円</td>
+            <td>
+              <%= form_with model: cart_item, method: :patch do |f| %>
+                <%= f.hidden_field :item_id %>
+                <%= f.select :amount, *[1..20] %>
+                <%= f.submit "変更", class: "btn btn-success" %>
+              <% end %>
+            </td>
+            <td><%= cart_item.item.tax_price * cart_item.amount %>円</td>
+            <td><%= link_to "削除", cart_item_path(cart_item), method: :delete, class: "btn btn-danger" %></td>
+          </tr>
+          <% end %>
+      </table>
+      <div class="d-flex justify-content-end">
+        <table class="border">
+          <tr>
+            <td>合計金額</td>
+            <td><%= total_price %>円</td>
+          </tr>
+        </table>
+      </div>
+    </div>
+  </div>
+</div>
