--- a/app/views/user/items/show.html.erb
+++ b/app/views/user/items/show.html.erb
@@ -13,6 +13,12 @@
       <%= @item.name %><br>
       <%= @item.description %><br>
       <%= (@item.excluding_tax_price * 1.1).to_i %>(税込)
+
+      <%= form_with model: @cart_item,url: cart_items_path, method: :post do |f| %>
+        <%= f.hidden_field :item_id ,value: @item.id %>
+        <%= f.select :amount, *[1..20] ,{prompt: "個数選択"}%>
+        <%= f.submit "カートに入れる", class: "btn btn-success" %>
+      <% end %>
     </div>
   </div>
 </div>
